--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,16 +1,5 @@
-EXTRA_DIST = ja en
+helpdir = $(pkgdatadir)/help
 
-dir = ja en
-
-install-data-local:
-	$(MKDIR_P) "$(DESTDIR)$(pkgdatadir)/help"
-	for lang in $(dir); do \
-	  $(MKDIR_P) "$(DESTDIR)$(pkgdatadir)/help/$$lang"; \
-	  for p in "$(srcdir)/$$lang/"*.html; do \
-	    f=`echo $$p | sed -e 's|^.*/||'`; \
-	    $(install_sh_DATA) "$$p" "$(DESTDIR)$(pkgdatadir)/help/$$lang/$$f"; \
-	  done; \
-	done;
-
-uninstall-local:
-	rm -rf "$(DESTDIR)$(pkgdatadir)/help"
+nobase_dist_help_DATA = \
+	en/body.html en/index.html en/menu.html \
+	ja/body.html ja/index.html ja/menu.html
