--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,12 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_PREREQ(2.53)
+AC_PREREQ(2.61)
 
-AC_INIT(ebview, 0.3.6, http://ebview.sourceforge.net/)
+AC_INIT([EBView], [0.3.6], [http://ebview.sourceforge.net/])
 AC_CONFIG_SRCDIR(src/ebview.c)
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE
 
 GETTEXT_PACKAGE=ebview
@@ -18,10 +18,9 @@ dnl AC_FUNC_SETVBUF_REVERSED
 
 dnl Checks for programs.
 AC_PROG_CC
-dnl AC_PROG_INSTALL
-dnl AC_PROG_AWK
+AC_PROG_INSTALL
 AC_PROG_LN_S
-AC_PROG_LIBTOOL
+LT_INIT
 
 dnl Checks for libraries.
 AM_PATH_GTK_2_0(2.0.0, , AC_MSG_ERROR(Cannot find GTK+), gthread)
@@ -66,4 +65,6 @@ AC_SUBST(CYGWIN_CFLAGS)
 AC_SUBST(CYGWIN_LDFLAGS)
 AC_SUBST(CYGWIN_LDADD)
 
-AC_OUTPUT(po/Makefile.in src/Makefile Makefile data/Makefile doc/Makefile data/about.jp data/about.en)
+AC_CONFIG_FILES([po/Makefile.in src/Makefile Makefile data/Makefile doc/Makefile])
+AC_CONFIG_FILES([data/about.jp data/about.en])
+AC_OUTPUT
