--- a/configure.in
+++ b/configure.in
@@ -46,6 +46,7 @@ AC_HEADER_TIME
 AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
 AC_TYPE_SIGNAL
+AC_SYS_LARGEFILE
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(mkdir select strdup strtol)
