New configure option ' --enable-maintainer-mode' to define macros GTK_DISABLE_DEPRECATED and GDK_DISABLE_DEPRECATED.

--- a/configure.in
+++ b/configure.in
@@ -14,6 +14,8 @@ AC_SUBST(GETTEXT_PACKAGE)
 ALL_LINGUAS="ja"
 AM_GLIB_GNU_GETTEXT
 
+EBVIEW_MAINTAINER_MODE
+
 dnl AC_FUNC_SETVBUF_REVERSED
 
 dnl Checks for programs.
