--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS = ebview
 
 AM_CPPFLAGS= @EBCONF_PTHREAD_CPPFLAGS@ @EBCONF_EBINCS@ \
-             @EBCONF_ZLIBINCS@ @EBCONF_INTLINCS@
+             @EBCONF_ZLIBINCS@ @EBCONF_INTLINCS@ \
+             @DISABLE_DEPRECATED@
 AM_CFLAGS = @PANGOX_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@ @CYGWIN_CFLAGS@
 AM_CXXFLAGS = @PANGOX_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@
 ebview_LDADD = @PANGOX_LIBS@ @GTK_LIBS@ \
