pango_x is deprecated. Use pango_xft instead.

--- a/configure.in
+++ b/configure.in
@@ -27,9 +27,9 @@ LT_INIT
 dnl Checks for libraries.
 AM_PATH_GTK_2_0(2.0.0, , AC_MSG_ERROR(Cannot find GTK+), gthread)
 
-PKG_CHECK_MODULES(PANGOX, pangox)
-AC_SUBST(PANGOX_CFLAGS)
-AC_SUBST(PANGOX_LIBS)
+PKG_CHECK_MODULES(PANGOXFT, pangoxft)
+AC_SUBST(PANGOXFT_CFLAGS)
+AC_SUBST(PANGOXFT_LIBS)
 
 eb_LIB_EB4
 
