--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,9 @@ bin_PROGRAMS = ebview
 AM_CPPFLAGS= @EBCONF_PTHREAD_CPPFLAGS@ @EBCONF_EBINCS@ \
              @EBCONF_ZLIBINCS@ @EBCONF_INTLINCS@ \
              @DISABLE_DEPRECATED@
-AM_CFLAGS = @PANGOX_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@ @CYGWIN_CFLAGS@
-AM_CXXFLAGS = @PANGOX_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@
-ebview_LDADD = @PANGOX_LIBS@ @GTK_LIBS@ \
+AM_CFLAGS = @PANGOXFT_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@ @CYGWIN_CFLAGS@
+AM_CXXFLAGS = @PANGOXFT_CFLAGS@ @GTK_CFLAGS@ @EBCONF_PTHREAD_CFLAGS@
+ebview_LDADD = @PANGOXFT_LIBS@ @GTK_LIBS@ \
                @EBCONF_EBLIBS@ @EBCONF_ZLIBLIBS@ @EBCONF_INTLLIBS@ \
                @CYGWIN_LDADD@
 ebview_LDFLAGS = @EBCONF_PTHREAD_LDFLAGS@ @CYGWIN_LDFLAGS@
