--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_PREREQ(2.61)
+AC_PREREQ([2.68])
 
-AC_INIT([EBView], [0.3.6], [http://ebview.sourceforge.net/])
+AC_INIT([EBView],[0.3.6],[http://ebview.sourceforge.net/])
 AC_CONFIG_SRCDIR(src/ebview.c)
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
@@ -47,7 +47,6 @@ AC_TYPE_PID_T
 AC_HEADER_TIME
 AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
-AC_TYPE_SIGNAL
 AC_SYS_LARGEFILE
 
 dnl Checks for library functions.
